--- a/stories/ar/0141_-الدجاجة-والدودة-.html
+++ b/stories/ar/0141_-الدجاجة-والدودة-.html
@@ -43,97 +43,97 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
 
-<h1 id="section">الدجاجة والدودة</h1>
+<h1 dir="rtl" id="section">الدجاجة والدودة</h1>
 
 Winny Asara<br>العربية</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
 
-<p>كانت الدجاجة والدودة أصدقاء، لكنهم كانوا يتنافسون دائما مع بعضها البعض. في يوم من الأيام، قرروا لعب كرة القدم لمعرفة من هو أفضل لاعب.</p>
+<p dir="rtl">كانت الدجاجة والدودة أصدقاء، لكنهم كانوا يتنافسون دائما مع بعضها البعض. في يوم من الأيام، قرروا لعب كرة القدم لمعرفة من هو أفضل لاعب.</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
 
-<p>ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيدا، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
+<p dir="rtl">ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيدا، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
 
-<p>بعد ذلك قرروا لعب ركلات الترجيح. في المرة الأولى كانت الدودة هي حارس المرمى. فسجلت   الدجاجة هدف واحد فقط. ثم جاء دور الدجاجة لتكون هي حارس المرمى.</p>
+<p dir="rtl">بعد ذلك قرروا لعب ركلات الترجيح. في المرة الأولى كانت الدودة هي حارس المرمى. فسجلت   الدجاجة هدف واحد فقط. ثم جاء دور الدجاجة لتكون هي حارس المرمى.</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
 
-<p>ركلت الدودة الكرة فسجلت هدف. ناورت الدودة بالكرة و سجلت هدف. سددت الدودة الكرة برأسها في المرمى و سجلت هدف. سجلت الدودة خمسة أهداف.</p>
+<p dir="rtl">ركلت الدودة الكرة فسجلت هدف. ناورت الدودة بالكرة و سجلت هدف. سددت الدودة الكرة برأسها في المرمى و سجلت هدف. سجلت الدودة خمسة أهداف.</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
 
-<p>كانت الدجاجة غاضبة لأنها خسرت، حيث أنها لم تكن تتمتع بالروح الرياضية. ضحكت الدودة لأن صديقتها الدجاجة أثارت ضجة لخسارتها.</p>
+<p dir="rtl">كانت الدجاجة غاضبة لأنها خسرت، حيث أنها لم تكن تتمتع بالروح الرياضية. ضحكت الدودة لأن صديقتها الدجاجة أثارت ضجة لخسارتها.</p>
 
 <div class="pagenum">5</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
 
-<p>كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعا وابتلعت الدودة.</p>
+<p dir="rtl">كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعا وابتلعت الدودة.</p>
 
 <div class="pagenum">6</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
 
-<p>بينما كانت الدجاجة تمشي في طريقها إلى المنزل، التقت بوالدة الدودة. سألت والدة الدودة الدجاجة: “هل رأيت إبنتي؟” لكن الدجاجة لم تقل أي شيء. كانت والدة الدودة قلقة.</p>
+<p dir="rtl">بينما كانت الدجاجة تمشي في طريقها إلى المنزل، التقت بوالدة الدودة. سألت والدة الدودة الدجاجة: “هل رأيت إبنتي؟” لكن الدجاجة لم تقل أي شيء. كانت والدة الدودة قلقة.</p>
 
 <div class="pagenum">7</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
 
-<p>ثم سمعت والدة الدودة صوتا صغيرا يبكي: “ساعديني يا أمي!”. نظرت والدة الدودة في جميع الأنحاء واستمعت بعناية، فوجدت الصوت يأتي من داخل الدجاجة.</p>
+<p dir="rtl">ثم سمعت والدة الدودة صوتا صغيرا يبكي: “ساعديني يا أمي!”. نظرت والدة الدودة في جميع الأنحاء واستمعت بعناية، فوجدت الصوت يأتي من داخل الدجاجة.</p>
 
 <div class="pagenum">8</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
 
-<p>صاحت والدة الدودة “استخدمي القوة الخاصة بك يا ابنتي!”. حيث يستطيع الديدان إخراج رائحة كريهة وطعم سيئ. بدأت الدجاجة تشعر بالمرض.</p>
+<p dir="rtl">صاحت والدة الدودة “استخدمي القوة الخاصة بك يا ابنتي!”. حيث يستطيع الديدان إخراج رائحة كريهة وطعم سيئ. بدأت الدجاجة تشعر بالمرض.</p>
 
 <div class="pagenum">9</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
 
-<p>تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيرا للاشمئزاز!</p>
+<p dir="rtl">تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيرا للاشمئزاز!</p>
 
 <div class="pagenum">10</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
 
-<p>استمرت الدجاجة تسعل حتى سعلت الدودة خارجا من بطنها. زحفت الدودة و والدتها  سريعا فوق شجرة للاختفاء.</p>
+<p dir="rtl">استمرت الدجاجة تسعل حتى سعلت الدودة خارجا من بطنها. زحفت الدودة و والدتها  سريعا فوق شجرة للاختفاء.</p>
 
 <div class="pagenum">11</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
 
-<p>ومنذ ذلك الوقت، أصبح الدجاج والديدان الأعداء.</p>
+<p dir="rtl">ومنذ ذلك الوقت، أصبح الدجاج والديدان الأعداء.</p>
 
 <div class="pagenum">12</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Winny Asara<br /><strong>Illustrations:</strong> Winny Asara<br /><strong>Translation:</strong> Abrar Wafa<br /><strong>Language:</strong> Arabic</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/chicken-and-millipede">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Winny Asara<br /><strong>Illustrations:</strong> Winny Asara<br /><strong>Translation:</strong> Abrar Wafa<br /><strong>Language:</strong> Arabic</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/chicken-and-millipede">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
