--- a/stories/ar/0327_لنعد-الحيوانات_slides.html
+++ b/stories/ar/0327_لنعد-الحيوانات_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>توم، بائع الموز - Global African Storybook</title>
+  <title>لنعد الحيوانات - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="توم-بائع-الموز" class="slide level1">
-<h1>توم، بائع الموز</h1>
+<section id="لنعد-الحيوانات" class="slide level1">
+<h1 dir="rtl">لنعد الحيوانات</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
-<p>يحمل توم طبق الموز الناضج.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
+<p dir="rtl">فيل واحد ذاهب لشرب الماء.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
-<p>يتجه توم إلى السوق لبيع الموز.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
+<p dir="rtl">زرافتان ذاهبتان لشرب الماء.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
-<p>الناس في السوق يشترون الفاكهة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
+<p dir="rtl">ثلاثة جواميس وأربعة طيور ذاهبون أيضا لشرب الماء.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
-<p>لكن لا أحد يشتري موزات توم. إنهم يحبذون شراء الفاكهة من النساء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
+<p dir="rtl">خمسة ظباء وستة خنازير برية يسيرون نحو الماء.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
-<p>يقول الناس &quot;في مجتمعنا لا يبيع الفاكهة إلا النساء&quot; ويتساءلون &quot;ما نوع هذا الرجل؟&quot;</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/06.jpg" /></p>
+<p dir="rtl">سبعة أحمرة وحشية تجري نحو الماء.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
-<p>لكن توم لا يستسلم. ها هو ينادي &quot;اشتروا موزي ... اشتروا موزي الناضج اللذيذ.&quot;</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
+<p dir="rtl">ثماني ضفادع وتسع سمكات يسبحن في الماء.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
-<p>أخذت امرأة حزمة الموز من على الطبق وتفحصتها بعناية.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
+<p dir="rtl">أسد واحد يزمجر. هو أيضا يريد أن يشرب. من ذا الذي يخاف من الأسد؟</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
-<p>اشترت المرأة الموز.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
+<p dir="rtl">فيل واحد يشرب الماء مع الأسد.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,53 +168,17 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
-<p>توافد الناس على المنضدة. يشترون موزات توم ويأكلونها.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
-<p>أفرغ الطبق بسرعة. أخذ توم يحصي المال الذي ربحه.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
-<p>ثم اشترى توم صابونا وسكرا وخبزا ووضع المشتريات في الطبق.</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
-<p>وضع توم الطبق على رأسه ورجع إلى منزله.</p>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="توم-بائع-الموز-1">توم، بائع الموز</h2>
-<strong>Text:</strong> Humphreys Odunga<br> <strong>Illustrations:</strong> Zablon Alex Nguku<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
-<p>
+<h2 id="لنعد-الحيوانات-1">لنعد الحيوانات</h2>
+<strong>Text:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>Illustrations:</strong> Rob Owen<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/tom-banana-seller'>here</a>
-<p><div class="license">
+<p dir="rtl">
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/counting-animals'>here</a>
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
