--- a/stories/ar/0001_الرجل-ذو-القامة-الطويلة.html
+++ b/stories/ar/0001_الرجل-ذو-القامة-الطويلة.html
@@ -43,90 +43,90 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/01.jpg" />
 
-<h1 id="section">الرجل ذو القامة الطويلة</h1>
+<h1 dir="rtl" id="section">الرجل ذو القامة الطويلة</h1>
 
 Cornelius Gulere<br>العربية</div><div class="pagebreak">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
 
-<p>كان معوله قصيرا جدا</p>
+<p dir="rtl">كان معوله قصيرا جدا</p>
 
 <div class="pagenum">1</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
 
-<p>ومدخل منزله منخفض جدا</p>
+<p dir="rtl">ومدخل منزله منخفض جدا</p>
 
 <div class="pagenum">2</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
 
-<p>كان فراشه قصيرا جدا</p>
+<p dir="rtl">كان فراشه قصيرا جدا</p>
 
 <div class="pagenum">3</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
 
-<p>وكذلك دراجته الهوائية</p>
+<p dir="rtl">وكذلك دراجته الهوائية</p>
 
 <div class="pagenum">4</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
 
-<p>إنه لرجل طويل جدا</p>
+<p dir="rtl">إنه لرجل طويل جدا</p>
 
 <div class="pagenum">5</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
 
-<p>ولذلك فقد قام بصناعة مسكة طويلة لمجرفته</p>
+<p dir="rtl">ولذلك فقد قام بصناعة مسكة طويلة لمجرفته</p>
 
 <div class="pagenum">6</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
 
-<p>ووسّع باب منزله</p>
+<p dir="rtl">ووسّع باب منزله</p>
 
 <div class="pagenum">7</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
 
-<p>كما قام بصناعة فراش طويل جدا</p>
+<p dir="rtl">كما قام بصناعة فراش طويل جدا</p>
 
 <div class="pagenum">8</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
 
-<p>واشترى دراجة هوائية عالية</p>
+<p dir="rtl">واشترى دراجة هوائية عالية</p>
 
 <div class="pagenum">9</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
 
-<p>لقد جلس على كرسي مرتفع وتناول طعامه بشوكة طويلة</p>
+<p dir="rtl">لقد جلس على كرسي مرتفع وتناول طعامه بشوكة طويلة</p>
 
 <div class="pagenum">10</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 
-<p>الرجل الطويل ترك منزله وذهب للعيش في غابة كبيرة حيث أمضى سنينا عديدة من عمره هناك</p>
+<p dir="rtl">الرجل الطويل ترك منزله وذهب للعيش في غابة كبيرة حيث أمضى سنينا عديدة من عمره هناك</p>
 
 <div class="pagenum">11</div>
-<p></div><div class="pagebreak"></p>
+<p dir="rtl"></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Cornelius Gulere<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Hanadi Traifeh<br /><strong>Language:</strong> Arabic</p>
-<p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/very-tall-man">here</a>
-<p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
+<p dir="rtl"><strong>Text:</strong> Cornelius Gulere<br /><strong>Illustrations:</strong> Catherine Groenewald<br /><strong>Translation:</strong> Hanadi Traifeh<br /><strong>Language:</strong> Arabic</p>
+<p dir="rtl">This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p dir="rtl">You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/very-tall-man">here</a>
+<p dir="rtl"><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
 
 
