--- a/stories/ar/0009_أين-قطتي؟_slides.html
+++ b/stories/ar/0009_أين-قطتي؟_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="أين-قطتي" class="slide level1">
-<h1>أين قطتي؟</h1>
+<h1 dir="rtl">أين قطتي؟</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/02.jpg" /></p>
-<p>أين قطتي؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/02.jpg" /></p>
+<p dir="rtl">أين قطتي؟</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/03.jpg" /></p>
-<p>هل هي تحت السرير؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/03.jpg" /></p>
+<p dir="rtl">هل هي تحت السرير؟</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
-<p>هل هي فوق الخزانة؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
+<p dir="rtl">هل هي فوق الخزانة؟</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
-<p>هل هي وراء الأريكة؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
+<p dir="rtl">هل هي وراء الأريكة؟</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
-<p>هل هي بجانب حاوية القمامة؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
+<p dir="rtl">هل هي بجانب حاوية القمامة؟</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
-<p>هل هي داخل السلة؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
+<p dir="rtl">هل هي داخل السلة؟</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
-<p>هل هي خارج المنزل؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
+<p dir="rtl">هل هي خارج المنزل؟</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/09.jpg" /></p>
-<p>!ها هي</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/09.jpg" /></p>
+<p dir="rtl">!ها هي</p>
 <center>
 <strong>8</strong>
 </center>
@@ -170,15 +170,15 @@
 
 <h2 id="أين-قطتي-1">أين قطتي؟</h2>
 <strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Hanadi Traifeh<br> <strong>Language:</strong> Arabic<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/where-my-cat'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
