--- a/stories/ar/0296_توم،-بائع-الموز_slides.html
+++ b/stories/ar/0296_توم،-بائع-الموز_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>يوم تركت المنزل ذاهبا إلي المدينة - Global African Storybook</title>
+  <title>توم، بائع الموز - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="يوم-تركت-المنزل-ذاهبا-إلي-المدينة" class="slide level1">
-<h1>يوم تركت المنزل ذاهبا إلي المدينة</h1>
+<section id="توم-بائع-الموز" class="slide level1">
+<h1 dir="rtl">توم، بائع الموز</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
-<p>كانت محطة القرية مزدحمة بالناس و الحافلات المكدسة بالركاب. علي الرصيف، إنتظر عدد أكبر من الركاب. كان السائقون ينادون علي مقاصدهم</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
+<p dir="rtl">يحمل توم طبق الموز الناضج.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
-<p>سمعت احد المنادين يصرخ: &quot;المدينة! المدينة! متجهين الي الغرب!&quot; هذه كانت الحافلة التي احتاجها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
+<p dir="rtl">يتجه توم إلى السوق لبيع الموز.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
-<p>كانت الحافلة قد اشرفت علي الاكتمال و لا تزال الركاب تتدافع للصعود اليها. بعض الركاب تركوا أمتعتهم في المكان المخصص لها بباطن الحافلة بينما اكتفي البعض الأخر بوضعها علي الأرفف بالداخل.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
+<p dir="rtl">الناس في السوق يشترون الفاكهة.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
-<p>امضي الركاب يبحثون عن مقاعد خالية وسط الزحام، وهم ممسكين بتذاكرههم. و ظلت الأمهات تداعب صغارها طوال الرحلة الطويلة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
+<p dir="rtl">لكن لا أحد يشتري موزات توم. إنهم يحبذون شراء الفاكهة من النساء.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
-<p>تقلصت انا بجانب احد النوافذ. كان يجلس بجانبي رجلا يحتضن حقيبة خضراء. كان الرجل يرتدي خفا و معطفا رثا، و قد بدي عليه القلق.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
+<p dir="rtl">يقول الناس &quot;في مجتمعنا لا يبيع الفاكهة إلا النساء&quot; ويتساءلون &quot;ما نوع هذا الرجل؟&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
-<p>همت بنظري خارج الحافلة و أدركت أنني أترك قريتي، المكان الذي نشأت فيه. كنت ذاهبا إلي المدينة الكبيرة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
+<p dir="rtl">لكن توم لا يستسلم. ها هو ينادي &quot;اشتروا موزي ... اشتروا موزي الناضج اللذيذ.&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
-<p>اكتملت الحافلة و بات جميع الركاب جالسين في مقاعدهم. ظل الباعة الجائلين يسعون داخل الحافلة لبيع بضائعهم للركاب. كان كلا منهم ينادي بما يعرض للبيع. كانت كلماتهم تضحكني.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
+<p dir="rtl">أخذت امرأة حزمة الموز من على الطبق وتفحصتها بعناية.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
-<p>بعض الركاب اشتري مأكولات و امضو يأكلونها، بينما فضل قيلل منهم المشروبات. و من لكم يكن يملك نقود مثلي إكتفي بالمشاهدة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
+<p dir="rtl">اشترت المرأة الموز.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
-<p>قاطع صفير الحافلة كل هذه الأحداث ليشير أننا جاهزين للتحرك. صار السائق يصرخ في الباعة الجائلين ليتركوا الحافلة.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
+<p dir="rtl">توافد الناس على المنضدة. يشترون موزات توم ويأكلونها.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
-<p>تسارع الباعة الجائلين خارج الحافلة. بعضهم أعاد باقي النقود للركاب، و بعضهم قام بمحاولة أخيرة لبيع المزيد من الأغراض.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
+<p dir="rtl">أفرغ الطبق بسرعة. أخذ توم يحصي المال الذي ربحه.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
-<p>إنطلقت الحافلة و نظرت أنا خارج النافذة. همت في إن كنت سأعود إلي قريتي يوما ما.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
+<p dir="rtl">ثم اشترى توم صابونا وسكرا وخبزا ووضع المشتريات في الطبق.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
-<p>بينما الحافلة قطعت الحافلة طريقها نحو المدينة، اصبح المناخ حار جدا. أغمضت عيناي و أنا آمل أن أنام.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
+<p dir="rtl">وضع توم الطبق على رأسه ورجع إلى منزله.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,53 +204,17 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
-<p>ظل ذهني يجذبني للمنزل. هل ستكون أمي في أمان؟ هل ستجلب أرانبي مالا؟ هل سيتذكر اخي أن يسقي أشجاري؟</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
-<p>في الطريق تذكرت أين يقطن عمي في المدينة الكبيرة. ظللت اردده حتي خلدت للنوم.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
-<p>بعد تسع ساعات، إستيقذت إلي قرع صاخب و صراخ المنادي علي الركاب العائدين إلي القرية. إنتزعت حقيبتي و أسرعت خارج الحافلة.</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
-<p>كانت الحافلة تمتلئ بسرعة. قريبا ستشق طريقها عائدة إلي الشرق. بالنسبة إلي كان أهم شئ أن أبحث عن عمي.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="يوم-تركت-المنزل-ذاهبا-إلي-المدينة-1">يوم تركت المنزل ذاهبا إلي المدينة</h2>
-<strong>Text:</strong> Lesley Koyi, Ursula Nafula<br> <strong>Illustrations:</strong> Brian Wambi<br> <strong>Translation:</strong> Maged Hassan<br> <strong>Language:</strong> Arabic<br>
-<p>
+<h2 id="توم-بائع-الموز-1">توم، بائع الموز</h2>
+<strong>Text:</strong> Humphreys Odunga<br> <strong>Illustrations:</strong> Zablon Alex Nguku<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/day-i-left-home-city'>here</a>
-<p><div class="license">
+<p dir="rtl">
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/tom-banana-seller'>here</a>
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
