--- a/stories/ar/0342_العقاب_slides.html
+++ b/stories/ar/0342_العقاب_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="العقاب" class="slide level1">
-<h1>العقاب</h1>
+<h1 dir="rtl">العقاب</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
 </center>
@@ -96,8 +96,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
-<p>في أحد الأيام حصلت ماما على الكثير من الفواكه.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
+<p dir="rtl">في أحد الأيام حصلت ماما على الكثير من الفواكه.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
-<p>سألناها: متى يمكننا أن نأخذ القليل منها. أجابت :سنأكل الفواكه في المساء.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
+<p dir="rtl">سألناها: متى يمكننا أن نأخذ القليل منها. أجابت :سنأكل الفواكه في المساء.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
-<p>أخي رهيم كان طماعا، تذوق كل الفواكه ، وأكل الكثير منها.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
+<p dir="rtl">أخي رهيم كان طماعا، تذوق كل الفواكه ، وأكل الكثير منها.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
-<p>صرخ أخي الصغير : انظرماذا فعل رهيم! أما أنا فقلت: رهيم غير محترم وأناني.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
+<p dir="rtl">صرخ أخي الصغير : انظرماذا فعل رهيم! أما أنا فقلت: رهيم غير محترم وأناني.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
-<p>غضبت ماما من رهيم.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
+<p dir="rtl">غضبت ماما من رهيم.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
-<p>ونحن أيضا غضبنا من رهيم ولكنه لم يعتذر.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
+<p dir="rtl">ونحن أيضا غضبنا من رهيم ولكنه لم يعتذر.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
-<p>سأل أخي الصغير :ألن تعاقبي رهيم؟</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
+<p dir="rtl">سأل أخي الصغير :ألن تعاقبي رهيم؟</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>حذرت ماما رهيم فقالت:عليك أن تعتذر حالا.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
+<p dir="rtl">حذرت ماما رهيم فقالت:عليك أن تعتذر حالا.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
-<p>بدأ رهيم بالشعور بالمرض.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
+<p dir="rtl">بدأ رهيم بالشعور بالمرض.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>همس رهيم :معدتي تؤلموني.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
+<p dir="rtl">همس رهيم :معدتي تؤلموني.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
-<p>عرفت ماما ماذا حصل إن الفواكه عاقبت رهيم!</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
+<p dir="rtl">عرفت ماما ماذا حصل إن الفواكه عاقبت رهيم!</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>أخيرا اعتذر رهيم فقال لنا : لن أكون طماعا بعد اليوم.</p>
+<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
+<p dir="rtl">أخيرا اعتذر رهيم فقال لنا : لن أكون طماعا بعد اليوم.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -206,15 +206,15 @@
 
 <h2 id="العقاب-1">العقاب</h2>
 <strong>Text:</strong> Adelheid Marie Bwire<br> <strong>Illustrations:</strong> Melany Pietersen<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p>
+<p dir="rtl">
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p>
+<p dir="rtl">
 You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/punishment'>here</a>
-<p><div class="license">
+<p dir="rtl"><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p><center><div class="license">
+<p dir="rtl"><center><div class="license">
 <a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
